<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.freelance.dd.myapplication.MainActivity">

    <ImageView
        android:id="@+id/shop_logo"
        android:layout_width="wrap_content"
        android:layout_height="330dp"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/shop_pic2"
        android:layout_margin="5dp"
        android:contentDescription="@string/img_content_description" />

    <TextView
        android:id="@+id/shop_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textAlignment="center"
        android:text="@string/app_header"
        android:background="@android:color/holo_purple"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/shop_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:text="@string/app_desc"
        android:textColor="@android:color/holo_green_dark"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@+id/shop_logo"
        android:layout_margin="5dp"/>
    <TextView
        android:id="@+id/shop_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:text="@string/app_location"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:layout_below="@+id/shop_desc"
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/shop_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:text="@string/app_contact"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:layout_below="@+id/shop_add"
        android:layout_margin="5dp"/>

</RelativeLayout>
